[gd_scene load_steps=7 format=2]

[ext_resource path="res://Weapons/PunchState.gd" type="Script" id=1]
[ext_resource path="res://Weapons/PunchAttack.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Overlap/Hitbox.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.68941, 5.52752 )

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.49722
height = 9.12411

[node name="PunchAttack" type="Node2D"]
script = ExtResource( 2 )
weapon_damage = 2

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.21875, 0.21875 )
texture = ExtResource( 3 )

[node name="PunchState" type="Node" parent="."]
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Hitbox" parent="." instance=ExtResource( 4 )]
collision_layer = 32
collision_mask = 8
damage = 2

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 2 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[editable path="Hitbox"]
